2008-11-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMultidimensionalIndexerRule.cs, AvoidSmallNamespaceRule.cs,
	ConsiderAddingInterfaceRule.cs, DeclareEventHandlersCorrectlyRule.cs,
	MarkAssemblyWithCLSCompliantRule.cs, 
	MarkAssemblyWithComVisibleRule.cs, OverrideEqualsMethodRule.cs,
	PreferEventsOverMethodsRule.cs, 
	ProvideAlternativeNamesForOperatorOverloadsRule.cs,
	TypesWithNativeFieldsShouldBeDisposableRule.cs: Small update to XML
	documentation.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Design.mdp:
	* Gendarme.Rules.Design.csproj: Activate makefile integration for all
	the rules projects. Remove the old mdp files as they are no longer
	needed.

2008-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderAddingInterfaceRule.cs: Fix reporting the issue. This
	rule analyze interfaces but report defects on types (a bit unusual)
	so it needs to build its own Defect instance since the Report
	overloads already have the rule and target set by the runner.

2008-10-30  Cedric Vivier <cedricv@neonux.com>

	* ConsiderAddingInterfaceRule.cs: New.
	Rule to check if a type could declare it implements an interface.

2008-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* FinalizersShouldCallBaseClassFinalizerRule.cs: Moved to 
	Correctness since this is not (API) design.
	* Gendarme.Rules.Design.mdp: Remove (moved) rule from build.
	* Makefile.am: Remove (moved) rule and unit test from build.

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedRule.cs: Moved to Correctness
	since this is not (API) design.
	* MarkAssemblyWithAssemblyVersionRule.cs: New. Rule that checks
	if the assembly name has a version number.
	* MarkAssemblyWithAttributeRule.cs: New. Abstract class to check
	for the presence of a specific attribute in an assembly.
	* MarkAssemblyWithCLSCompliantRule.cs: New. Rule that checks if
	the assembly has a [CLSCompliant] attribute.