@@ -1,3 +1,9 @@
+2008-11-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ConsiderAddingInterfaceRule.cs: Only check the current assembly 
+	or assemblies (from the set) that refers to the current assembly. 
+	Huge performance boost when a large number of assemblies are used.
+
 2008-11-13  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidMultidimensionalIndexerRule.cs, AvoidSmallNamespaceRule.cs,
